src/Test/Fixtures/Good/Arrays/zeroLengthBitArrayDeclaration.lf
let bits : [bit; 0] = [];
