src/Test/Fixtures/Bad/Arrays/unexpectedLiteralAfterMeasrBitArrayInitializer.lf
let bs : [bit; 8] = measr(qs) 0;